@startuml
title Diseño de datos — tabla plano (Sprint 2)
skinparam classBackgroundColor #EBF5FB
skinparam classBorderColor #2980B9
skinparam arrowColor #5D6D7E

class proyecto {
  +id: Integer
  +nombre: String
  +estado: EstadoProyecto
  +tecnico_id: Integer (FK)
  +cliente_id: Integer (FK)
}

class plano {
  +id: Integer <<PK>>
  +proyecto_id: Integer <<FK>>
  +nombre: String
  +formato: String (png/jpg/pdf)
  +ruta_archivo: String
  +ancho_px: Integer
  +alto_px: Integer
  +escala_m_por_px: Float (nullable)
  +calibrado: Boolean (default: False)
  +fecha_subida: DateTime
}

class punto_medicion {
  +id: Integer <<PK>>
  +plano_id: Integer <<FK>>
  +x_px: Float
  +y_px: Float
  +x_m: Float
  +y_m: Float
  +nivel: NivelSenal
  +timestamp: DateTime
}

proyecto "1" -- "0..*" plano : tiene >
plano "1" -- "0..*" punto_medicion : contiene >
@enduml
